Message to be shown now directly in your HTML
Untill now the message was written in the ::before content property of the lightbox, since now the ::before content property displays the message within the attribute "data-message" so you could define your message directly from the HTML

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ img {
         position: fixed;
         cursor: pointer; }
     .tip-off::before {
-        content: "Para una navegación más sencilla te recomendamos usar tu dispositivo en vertical";
+        content: attr(data-message);
         width: 80%;
         height: auto;
         top: 50%;
